--- a/workspace_htmlcss/css/화면2구현_회원가입 copy.css
+++ b/workspace_htmlcss/css/화면2구현_회원가입 copy.css
@@ -19,6 +19,11 @@ table > tbody > tr > td:first-child{
   padding-left: 20px;
 }
 
+.input{
+  font-size: 12px;
+  text-align: right;
+}
+
 .color-red{
   color: red;
 }
